# INCLUDES = -I$(top_srcdir)/src/include
# AM_CFLAGS = -I$(top_srcdir)/src/include
# INCLUDES_PATH = $(top_srcdir)/src/include
# LIB_PATH = $(top_srcdir)/src/lib
# LIBLWHTIP = $(LIB_PATH)/liblwhtip.la

AM_CPPFLAGS = -I$(top_srcdir)/src/include

noinst_LTLIBRARIES = liblwhtip.la
liblwhtip_la_SOURCES = binary.c datalink.c htip.c ifinfo.c fdb.c timer.c tlv.c upnp.c
